Release v3.0.0 — agentic contributor stack, in-app welcome, CLI welcome/docs/agents
Major release positioning Venus as an AI-native, local-first notebook platform.

AI contributor stack:
- AGENTS.md as the single source of truth for AI coding agents; CLAUDE.md,
  .github/copilot-instructions.md, and GEMINI.md defer to it
- Primary `venus` agent + specialists (venus-architect, venus-security,
  venus-tutorial-writer) and auto-invoking skills, registered in .claude/
- PR security gate: scripts/security-check.{ps1,sh} + workflow that drafts a PR
  until findings clear; CODEOWNERS founder review (@snchande)
- 12-page branded product brochure (docs/brochure)

Common welcome experience everywhere:
- venus.ps1/sh/cmd gain `welcome`, `docs`, and `agents` subcommands; export
  VENUS_HOME + guardrail/skill/agent context; detect Claude/Copilot/Gemini CLIs
- Backend util/VenusHome runs AI CLIs from the repo root so the in-UI AI panel
  inherits AGENTS.md + .claude (ClaudeService, GeminiService, CopilotCliService)
- docs/WELCOME.md is the canonical content; the venus agent delivers the same

In-app Welcome / User Guide / What's New:
- static/js/welcome.js overlay with Overview/Admin/Developer/Architecture tracks
- First-run auto-show; What's New appears on version change; reopen from Help
- Release-by-release history with links to the full CHANGELOG

Release notes: cut CHANGELOG [3.0.0] (resolves a 2.1.0 collision), bump README
badge and status bar to v3.0.0.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>